[core-server] 调整测试